[package]
name = "rust-rocket-simple"
version = "0.1.0"
authors = ["Name <name@email.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appsody-rocket = { path = ".appsody" }
rocket = "0.4.2"

[[bin]]
name = "rust-rocket-simple"
path = "src/main.rs"