[package]
name = "rust-tide-default"
version = "0.1.0"
authors = ["Anton Whalley <anton@venshare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.11" }
http-types = "2.0.1"
async-std = { version = "1" }
surf = { version = "2.0.0-alpha.3", default-features = false, features = ["h1-client"] }